...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/socialLinksButton" />

    <Button
        android:id="@+id/logout"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Logout"
        app:layout_constraintBottom_toBottomOf="parent"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:inputType="none"
        android:text="Purple Programmer"
        android:textAlignment="center"
...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/highSchoolsButton"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:text="High Schools" />

            </LinearLayout>

...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/marital_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:textColor="#000"
                    android:textSize="17dp" />
...
