...
        android:layout_height="55dp"
        android:background="#4CAF50"
        android:text="Edit"
        android:textSize="20sp" />

    <Button
        android:id="@+id/backToMyProfile"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_gravity="bottom"
        android:onClick="backToLoginUserProfile"
        android:text="My Profile"
        android:textSize="20sp" />
...
