...
        app:layout_constraintBottom_toTopOf="@+id/backToConnections"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/socialLinksButton"
        android:layout_width="293dp"
        android:layout_height="57dp"
        android:text="My Social Links"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
